Completed A2 Tuiter section.

--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -11,7 +11,7 @@
     <!-- Profile image -->
     <img width="48px"
          height="48px"
-         src="https://pbs.twimg.com/profile_images/662051870190374912/pTgK04H3_400x400.jpg"/>
+         src="katie.jpg"/>
     <br/>
 
     <form>
@@ -32,13 +32,13 @@
     <hr>
 
     <ul>
-        <li>
+        <li style="margin-bottom: 20px">
             <a href="topic.html">Topic 123</a><br/>
             <img width="48px"
                  height="48px"
-                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Atari_logo_alt.svg/1200px-Atari_logo_alt.svg.png"/>
-            <a href="profile.html">Alice</a>
-            @alice - 2h
+                 src="katie.jpg"/>
+            <a href="profile.html">Katie</a>
+            @katie - 2h
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -49,14 +49,22 @@
                 cupidatat non proident, sunt in culpa qui officia deserunt
                 mollit anim id est laborum.
             </p>
-            <table rules="cols">
-                <tr>
-                    <td><a href="reply.html">Reply</a> 123&nbsp;</td>
-                    <td>&nbsp;<a href="retuit.html">Retuit</a> 234&nbsp;</td>
-                    <td>&nbsp;<a href="like.html">Like</a> 345&nbsp;</td>
-                    <td>&nbsp;<a href="share.html">Share</a></td>
-                </tr>
-            </table>
+
+            <a href="reply.html">Reply</a> 123 |
+            <a href="retuit.html">Retuit</a> 234 |
+            <a href="like.html">Like</a> 345 |
+            <a href="share.html">Share</a>
+        </li>
+        <li style="margin-bottom: 20px">
+            <a href="topic.html">Topic 234</a><br/>
+            <img width="48px"
+                 height="48px"
+                 src="https://pbs.twimg.com/profile_images/662051870190374912/pTgK04H3_400x400.jpg"/>
+            <a href="profile.html">Misty</a>
+            @misty - 4h
+            <p>
+                Sometimes I look at that Psyduck's face and I get a headache.
+            </p>
 
             <a href="reply.html">Reply</a> 123 |
             <a href="retuit.html">Retuit</a> 234 |
