Organized code, added finishing touches

--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -14,8 +14,8 @@
             <!-- Heading of screen -->
             <div class="wd-flex-container wd-outline wd-flex-justify-space-between">
                 <div class="wd-flex-container wd-flex-direction-column wd-padding-left-16px wd-padding-top-12px wd-padding-bottom-12px">
-                    <div class="wd-font-20px wd-fg-color-white wd-font-bold">Bookmarks</div>
-                    <div class="wd-font-13px wd-fg-color-gray">@WebDev</div>
+                    <div class="wd-fg-color-white wd-font-20px wd-font-bold">Bookmarks</div>
+                    <div class="wd-fg-color-gray wd-font-13px">@WebDev</div>
                 </div>
                 <div class="wd-flex-container wd-fg-color-blue wd-padding-right-16px wd-flex-align-center">
                     <i class="fa fa-ellipsis-h" style="font-size:20px"></i>
@@ -31,15 +31,15 @@
                 </div>
                 <!-- Tuit -->
                 <div class="wd-flex-container wd-flex-direction-column wd-padding-left-12px wd-padding-top-12px wd-flex-container-stretch">
-                    <div class="wd-flex-container wd-flex-justify-center wd-flex-justify-space-between">
-                        <div class="wd-font-15px wd-fg-color-white wd-font-bold">
-                            Robert Zubrin <span class="wd-font-15px wd-fg-color-gray wd-font-lighter">@robert_zubrin &#8226 Jul 31</span>
+                    <div class="wd-flex-container wd-flex-justify-space-between wd-flex-justify-center">
+                        <div class="wd-fg-color-white wd-font-15px wd-font-bold">
+                            Robert Zubrin <span class="wd-fg-color-gray wd-font-15px wd-font-lighter">@robert_zubrin &#8226 Jul 31</span>
                         </div>
                         <div class="wd-fg-color-white wd-padding-right-16px">
                             <i class="fa fa-ellipsis-h wd-fg-color-gray"></i>
                         </div>
                     </div>
-                    <div class="wd-fg-color-white wd-font-15px wd-font-lighter wd-padding-top-12px wd-max-width-506px wd-padding-right-16px wd-padding-bottom-12px">
+                    <div class="wd-fg-color-white wd-font-15px wd-font-lighter wd-max-width-506px wd-padding-top-12px wd-padding-bottom-12px wd-padding-right-16px">
                         Lorem ipsum dolor sit amet, consectetur adipiscing
                         elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -67,10 +67,18 @@
                         <div class="wd-fg-color-gray wd-font-15px wd-font-lighter wd-padding-left-12px wd-padding-top-12px wd-padding-right-12px"><i class="fas fa-external-link-alt"></i> rt.com</div>
                     </div>
                     <div class="wd-flex-container wd-flex-justify-space-between wd-max-width-504px wd-padding-top-12px wd-padding-bottom-12px">
-                        <a href="#" class="wd-icon-link"><i class="far fa-comment"></i><span class="wd-padding-left-12px">22</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-retweet"></i><span class="wd-padding-left-12px">9</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-heart wd-fg-color-red"></i><span class="wd-padding-left-12px wd-fg-color-red">37</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-share-square"></i><span class="wd-padding-left-12px"></span></a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="far fa-comment"></i><span class="wd-padding-left-12px">22</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-retweet"></i><span class="wd-padding-left-12px">9</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-heart wd-fg-color-red"></i><span class="wd-fg-color-red wd-padding-left-12px">37</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-share-square"></i><span class="wd-padding-left-12px"></span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -121,10 +129,18 @@
                         </div>
                     </div>
                     <div class="wd-flex-container wd-flex-justify-space-between wd-max-width-504px wd-padding-top-12px wd-padding-bottom-12px">
-                        <a href="#" class="wd-icon-link"><i class="far fa-comment"></i><span class="wd-padding-left-12px">54</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-retweet"></i><span class="wd-padding-left-12px">7</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-heart wd-fg-color-red"></i><span class="wd-padding-left-12px wd-fg-color-red">28</span></a>
-                        <a href="#" class="wd-icon-link"><i class="fas fa-share-square"></i><span class="wd-padding-left-12px"></span></a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="far fa-comment"></i><span class="wd-padding-left-12px">54</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-retweet"></i><span class="wd-padding-left-12px">7</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-heart wd-fg-color-red"></i><span class="wd-fg-color-red wd-padding-left-12px">28</span>
+                        </a>
+                        <a href="#" class="wd-icon-hyperlink">
+                            <i class="fas fa-share-square"></i><span class="wd-padding-left-12px"></span>
+                        </a>
                     </div>
                 </div>
             </div>
