--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -54,7 +54,13 @@
             </div>
             <div class="wd-flex-container wd-padding-12px wd-padding-right-16px wd-flex-justify-space-between wd-outline">
                 <div class="wd-flex-container wd-flex-direction-column">
-                    <div class="wd-font-13px wd-fg-color-white wd-font-bold">The New York Times <i class="fa fa-check-circle" style="color:white"></i><span class="wd-fg-color-gray wd-font-normal"> &#8226 Yesterday</span></div>
+                    <div class="wd-font-13px wd-fg-color-white wd-font-bold">
+                        <img alt="NY Times image"
+                             src="https://theme.zdassets.com/theme_assets/968999/d8a347b41db1ddee634e2d67d08798c102ef09ac.jpg"
+                             class="wd-explore-avatar">
+                        The New York Times <i class="fa fa-check-circle" style="color:white"></i>
+                        <span class="wd-fg-color-gray wd-font-normal"> &#8226 Yesterday</span>
+                    </div>
                     <div class="wd-font-15px wd-fg-color-white wd-padding-top-12px wd-font-bold">CNN's Cuomo conundrum: A start anchor with a brother in trouble</div>
                 </div>
                 <img alt="CNN image"
@@ -72,7 +78,13 @@
             </div>
             <div class="wd-flex-container wd-padding-12px wd-padding-right-16px wd-flex-justify-space-between wd-outline">
                 <div class="wd-flex-container wd-flex-direction-column">
-                    <div class="wd-font-13px wd-fg-color-white wd-font-bold">Bloomberg Opinion <i class="fa fa-check-circle" style="color:white"></i><span class="wd-fg-color-gray wd-font-normal"> &#8226 Yesterday</span></div>
+                    <div class="wd-font-13px wd-fg-color-white wd-font-bold">
+                        <img alt="Bloomberg Opinion avatar"
+                             src="https://pbs.twimg.com/profile_images/991778099397320705/6LWXR6MS_400x400.jpg"
+                             class="wd-explore-avatar">
+                        Bloomberg Opinion <i class="fa fa-check-circle" style="color:white"></i>
+                        <span class="wd-fg-color-gray wd-font-normal"> &#8226 Yesterday</span>
+                    </div>
                     <div class="wd-font-15px wd-fg-color-white wd-padding-top-12px wd-font-bold">Thinking about getting a booster? Read this first</div>
                 </div>
                 <img alt="Booster image"
