Updating explore page according to A3 feedback

--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link href= "https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet">
 </head>
-<body>
+<body class="wd-bg-color-black">
     <div class="wd-bg-color-black wd-padding-12px wd-padding-left-16px">
         <div class="wd-flex-container wd-flex-direction-column">
             <!-- Search, settings button, and menu -->
@@ -24,13 +24,13 @@
                     <a href="explore-settings.html"><i class="fas fa-cog wd-fg-color-blue wd-padding-left-60px" style="font-size:24px;"></i></a>
                 </div>
                 <!-- Hyperlinks -->
-                <div class="wd-flex-container wd-flex-justify-space-around wd-fg-color-gray wd-font-15px wd-font-bold">
-                    <a class="wd-fg-color-blue wd-padding-16px wd-border-bottom-blue">For you</a>
-                    <a class="wd-padding-16px">Trending</a>
-                    <a class="wd-padding-16px">COVID-19</a>
-                    <a class="wd-padding-16px">News</a>
-                    <a class="wd-padding-16px">Sports</a>
-                    <a class="wd-padding-16px">Entertainment</a>
+                <div class="wd-flex-container wd-flex-justify-space-around wd-font-15px wd-font-bold">
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-blue wd-padding-16px wd-border-bottom-blue">For you</a>
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-gray wd-padding-16px">Trending</a>
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-gray wd-padding-16px">COVID-19</a>
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-gray wd-padding-16px">News</a>
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-gray wd-padding-16px">Sports</a>
+                    <a href="#" class="wd-explore-tab-hyperlink wd-fg-color-gray wd-padding-16px">Entertainment</a>
                 </div>
             </div>
             <!-- Divider -->
