Updated explore page background

--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link href= "https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet">
 </head>
-<body>
+<body class="wd-bg-color-black">
     <div class="wd-bg-color-black wd-padding-12px wd-padding-left-16px">
         <!-- Line page heading and bookmarked tuits up vertically -->
         <div class="wd-flex-container wd-flex-direction-column">
