XXL screen set up

--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -35,7 +35,8 @@
         <div class="col-8 bg-secondary text-white">
             <h3>Main content</h3></div>
         <div class="col-2 bg-info">
-            <h3>Sidebar</h3></div></div>
+            <h3>Sidebar</h3></div>
+    </div>
     <!-- 3.2.3 Responsive grids -->
     <h2>Responsive grid system</h2>
     <div class="row">
