Adjustments to layout

--- a/public/labs/a4/index.html
+++ b/public/labs/a4/index.html
@@ -365,6 +365,12 @@
     <button class="btn btn-primary override-bs">
         Overridden Button
     </button>
+    <div class="text-primary">
+        Katie
+    </div>
+    <div class="text-info">
+        Katie
+    </div>
     <!-- 3.5 Navigating with tabs, pills and cards -->
     <!-- 3.5.1 Navigating with tabs -->
     <h2><a href="https://getbootstrap.com/docs/5.1/components/navs-tabs/">Tabs</a></h2>
