--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -130,7 +130,7 @@
             <!-- Tabs -->
             <ul class="nav nav-tabs border border-top-0 border-bottom-0 d-flex justify-content-around">
                 <li class="nav-item">
-                    <a class="nav-link active border-primary text-dark border-0 border-bottom border-5 rounded fw-bold" href="for-you.html">For you</a>
+                    <a class="nav-link active override-bs" href="for-you.html">For you</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link override-bs" href="trending.html">Trending</a>
