--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -64,7 +64,7 @@
                 <a href="../bookmarks/index.html" class="list-group-item list-group-item-action">
                     <div class="row justify-content-start align-items-center">
                         <div class="col-3">
-                            <div><i class="fas fa-bell"></i></div>
+                            <div><i class="fas fa-bookmark"></i></div>
                         </div>
                         <div class="col">
                             <div class="d-none d-xl-block">Bookmarks</div>
