--- a/public/tuiter/bookmarks/index.html
+++ b/public/tuiter/bookmarks/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <title>Bookmarks</title>
     <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="index.css">
     <link href= "https://use.fontawesome.com/releases/v5.3.1/css/all.css" rel="stylesheet">
 </head>
 <body class="wd-bg-color-black">
-    <div class="wd-bg-color-black wd-padding-12px wd-padding-left-16px">
+    <div class="wd-padding-12px wd-padding-left-16px">
         <!-- Line page heading and bookmarked tuits up vertically -->
         <div class="wd-flex-container wd-flex-direction-column">
             <!-- Heading of screen -->
@@ -27,7 +26,7 @@
                 <div class="wd-padding-left-16px wd-padding-top-12px">
                     <img alt="Avatar image"
                          src="https://www.nasa.gov/sites/default/files/thumbnails/image/robert_zubrin_cover_photo.jpg"
-                         class="wd-bookmark-avatar">
+                         class="wd-avatar-48px">
                 </div>
                 <!-- Tuit -->
                 <div class="wd-flex-container wd-flex-direction-column wd-padding-left-12px wd-padding-top-12px wd-flex-container-stretch">
@@ -88,7 +87,7 @@
                 <div class="wd-padding-left-16px wd-padding-top-12px">
                     <img alt="Avatar image"
                          src="https://carlsonschool.umn.edu/sites/carlsonschool.umn.edu/files/Corie-Barry_headshot.jpg"
-                         class="wd-bookmark-avatar">
+                         class="wd-avatar-48px">
                 </div>
                 <!-- Tuit -->
                 <div class="wd-flex-container wd-flex-direction-column wd-padding-left-12px wd-padding-top-12px wd-flex-container-stretch">
