--- a/public/tuiter/ExploreScreen/index.html
+++ b/public/tuiter/ExploreScreen/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Who To Follow List</title>
+    <title>Explore screen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -17,7 +17,7 @@
     <link href="../styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <div id="wd-who-to-follow-list"></div>
+    <div class="container" id="wd-explore"></div>
     <script src="index.js" type="module"></script>
 </body>
 </html>
