--- a/public/tuiter/HomeScreen/index.html
+++ b/public/tuiter/HomeScreen/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Explore Component</title>
+    <title>Home Screen</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
@@ -14,10 +14,10 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
             integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
             crossorigin="anonymous"></script>
-    <link href="index.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <div id="wd-explore-component"></div>
-    <script src="ExploreComponent.js" type="module"></script>
+    <div class="container" id="wd-home"></div>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
