--- a/public/tuiter/NavigationSidebar/index.html
+++ b/public/tuiter/NavigationSidebar/index.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
             integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
             crossorigin="anonymous"></script>
-    <link href="../explore/index.css" rel="stylesheet"/>
+    <link href="../styles.css" rel="stylesheet"/>
 </head>
 <body>
     <div id="wd-navigation-sidebar"></div>
