--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <h1>Web Dev Assignments</h1>
-    <ul>
-      <li><a href="tuiter/navigation.html">Tuiter</a></li>
-      <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-      <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
-      <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
-      <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
-      <li><a href="labs/a5/todos/index.html">TODO List</a></li>
-    </ul>
+    <div id="root"></div>
     <!--
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
